--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -43,60 +43,60 @@ jobs:
         run: terraform apply -auto-approve
         working-directory: environments/dev
 
-  apply-staging:
-    name: Apply (staging)
-    runs-on: ubuntu-latest
-    needs: apply-dev
-    environment: staging
+  # apply-staging:
+  #   name: Apply (staging)
+  #   runs-on: ubuntu-latest
+  #   needs: apply-dev
+  #   environment: staging
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.GCP_SERVICE_ACCOUNT }}
+  #     - name: Authenticate to GCP
+  #       uses: google-github-actions/auth@v2
+  #       with:
+  #         workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+  #         service_account: ${{ vars.GCP_SERVICE_ACCOUNT }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: environments/staging
+  #     - name: Terraform Init
+  #       run: terraform init
+  #       working-directory: environments/staging
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: environments/staging
+  #     - name: Terraform Apply
+  #       run: terraform apply -auto-approve
+  #       working-directory: environments/staging
 
-  apply-prod:
-    name: Apply (prod)
-    runs-on: ubuntu-latest
-    needs: apply-staging
-    environment: prod
+  # apply-prod:
+  #   name: Apply (prod)
+  #   runs-on: ubuntu-latest
+  #   needs: apply-staging
+  #   environment: prod
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.GCP_SERVICE_ACCOUNT }}
+  #     - name: Authenticate to GCP
+  #       uses: google-github-actions/auth@v2
+  #       with:
+  #         workload_identity_provider: ${{ vars.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+  #         service_account: ${{ vars.GCP_SERVICE_ACCOUNT }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: environments/prod
+  #     - name: Terraform Init
+  #       run: terraform init
+  #       working-directory: environments/prod
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        working-directory: environments/prod
+  #     - name: Terraform Apply
+  #       run: terraform apply -auto-approve
+  #       working-directory: environments/prod
