add wildcard DNS, Gateway API routing, and per-client helm scripts
- Add *.dev.kube-intel.com wildcard A record pointing to CDN frontend IP
- Add *.api-dev.kube-intel.com wildcard A record pointing to GKE Gateway global IP
- Switch gateway to global external LB and wildcard cert coverage
- Parameterise helm install/uninstall scripts by client prefix (namespace + HTTPRoute)
- Upgrade GKE node machine type to e2-standard-4

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,6 +3,13 @@ global:
 
 clickhouse:
   installCustomStorageClass: true
+  resources:
+    requests:
+      cpu: 1000m
+      memory: 2Gi
+    limits:
+      cpu: 1500m
+      memory: 4Gi
 
 postgresql:
   enabled: true
