add health check policies, otel HTTPRoute, and gateway fixes
- Add HealthCheckPolicy for signoz (HTTP) and otel-collector (gRPC) services
- Add HTTPRoute for otel-collector on ${PREFIX}-otel.api-dev.kube-intel.com:4317
- Move gateway IP to spec.addresses (NamedAddress) and open allowedRoutes to All namespaces
- Bump signoz image tag to main-3c96838

--- a/modules/gke/gateway.yaml
+++ b/modules/gke/gateway.yaml
@@ -15,7 +15,6 @@ metadata:
   name: external-gateway-001
   namespace: gateway-api
   annotations:
-    networking.gke.io/load-balancer-ip: kip-dev-gateway-ip
     networking.gke.io/certmap: kip-dev-gateway-certmap
 spec:
   gatewayClassName: gke-l7-global-external-managed
@@ -23,3 +22,9 @@ spec:
   - name: https
     port: 443
     protocol: HTTPS
+    allowedRoutes:
+      namespaces:
+        from: All
+  addresses:
+  - type: NamedAddress
+    value: kip-dev-gateway-ip
