add gRPC service for otel-collector and bearer token auth config
- Create a dedicated signoz-otel-collector-grpc Service with h2c appProtocol for proper gRPC routing through GKE Gateway
- Configure otel-collector with bearer token authentication on gRPC and HTTP receivers

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -20,3 +20,22 @@ signoz:
     tag: main-3c96838
   env:
     signoz_web_enabled: "false"
+
+otelCollector:
+  config:
+    receivers:
+      otlp:
+        protocols:
+          grpc:
+            endpoint: 0.0.0.0:4317
+            max_recv_msg_size_mib: 16
+            auth:
+              authenticator: bearertokenauth
+          http:
+            endpoint: 0.0.0.0:4318
+    extensions:
+      bearertokenauth:
+        scheme: "Bearer"
+        token: "randomtoken"
+    service:
+      extensions: [health_check, zpages, pprof, bearertokenauth]
